test_programs/compile_failure/noirc_frontend_tests_deny_attaching_mut_ref_to_immutable_object/src/main.nr

    struct Foo {
        value: Field,
    }

    impl Foo {
        fn mutate(&mut self) {
            self.value = 2;
        }
    }

    fn main() {
        let foo = Foo { value: 1 };
        let f = || foo.mutate();
        f();
        assert(foo.value == 2);
    }
    